<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:attr="http://schemas.android.com/apk/res/com.pdy.mobile"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black" >

    <RelativeLayout
        android:id="@+id/top_menu"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:background="@color/black" >

        <ImageView
            android:id="@+id/next"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:src="@drawable/next" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/editor_movie_text"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <ImageView
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/next"
            android:layout_marginLeft="8dp"
            android:src="@drawable/back" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/record_layout"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_below="@id/top_menu"
        android:background="@color/top_black" >

        <com.pdy.camera.MyVideoView
            android:id="@+id/record_preview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/record_layout"
            android:layout_centerInParent="true" />

        <com.pdy.textview.view.MyRelativeLayout
            android:id="@+id/id_rela"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/transparent" >

            <TextView
                android:id="@+id/sub_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text=""
                android:textColor="@color/yellow" />
        </com.pdy.textview.view.MyRelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/menu_scroll"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@color/top_black"
        android:orientation="horizontal" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" />

        <com.pdy.others.ClickChangeImage
            android:id="@+id/cut_video"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:src="@drawable/cut"
            attr:clickDrawable="@drawable/cut"
            attr:drawable="@drawable/cut" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" />

        <com.pdy.others.ClickChangeImage
            android:id="@+id/filter_video"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:src="@drawable/filter"
            attr:clickDrawable="@drawable/filter"
            attr:drawable="@drawable/filter" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" />

        <com.pdy.others.ClickChangeImage
            android:id="@+id/subtitle_video"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:src="@drawable/subtitle"
            attr:clickDrawable="@drawable/subtitle"
            attr:drawable="@drawable/subtitle" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/record_layout"
        android:background="@color/top_black"
        android:orientation="horizontal" >

        <FrameLayout
            android:id="@+id/record_play"
            android:layout_width="60dp"
            android:layout_height="60dp" >

            <ImageView
                android:id="@+id/video_play_image"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/video_play" />
        </FrameLayout>

        <TextView
            android:id="@+id/video_time_start"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/video_time_start"
            android:textColor="@color/white" />

        <SeekBar
            android:id="@+id/video_progress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/video_time_end"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/video_time_end"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/menu_scroll"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout1"
        android:background="@color/bottom_black"
        android:orientation="horizontal" >

        <include
            android:id="@+id/layout_filter"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            layout="@layout/fragment_image_edit_filter"
            android:visibility="gone" />

        <FrameLayout
            android:id="@+id/editor_cut_video"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:visibility="visible" >

            <HorizontalScrollView
                android:id="@+id/videos_horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="right|center_horizontal"
                android:scrollbars="none"
                android:visibility="visible" >

                <LinearLayout
                    android:id="@+id/cut_video_image"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal" >
                </LinearLayout>
            </HorizontalScrollView>

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent">

                <FrameLayout
                    android:id="@+id/editor_cut_video1"
                    android:layout_width="fill_parent"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:layout_height="120dp">
                    
                </FrameLayout>

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|bottom"
                    android:layout_marginBottom="9dp"
                    android:text="拖动剪刀或缩略图"
                    android:textColor="@color/beige" />
            </FrameLayout>
        </FrameLayout>

        <LinearLayout
            android:id="@+id/editor_subtitle_video"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <HorizontalScrollView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1" >

                <LinearLayout
                    android:id="@+id/editor_subtitle_video_type"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:orientation="horizontal" >
                </LinearLayout>
            </HorizontalScrollView>

            <HorizontalScrollView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1" >

                <LinearLayout
                    android:id="@+id/editor_subtitle_video_color"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal" >
                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>